--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Hello GitHub</h1>
   <p>This is the first file in my new Git Repo.</p>
   <p>A new line in our file!</p>
+  <p>line in second branch for conflict with master</p>
 </body>
 </html>
