--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <p>This is the first file in my new Git Repo.</p>
   <p>A new line in our file!</p>
   <p>line in second branch for conflict with master</p>
+  <p>write some line on github</p>
 </body>
 </html>
